<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blurbook.blurbook.Views.SignUpActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="50dp"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/first_name"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="22dp"
        android:text="@string/last_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="20dp"
        android:text="@string/user_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_email"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_fisrtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/first_name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/last_name"
        android:layout_alignBottom="@+id/last_name"
        android:layout_alignLeft="@+id/et_fisrtname"
        android:layout_alignRight="@+id/et_fisrtname"
        android:ems="10" />

    <EditText
        android:id="@+id/et_cu_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_email"
        android:layout_alignBottom="@+id/txt_email"
        android:layout_alignLeft="@+id/et_lastname"
        android:layout_alignRight="@+id/et_lastname"
        android:ems="10" />

    <EditText
        android:id="@+id/et_cu_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_password"
        android:layout_alignBottom="@+id/txt_password"
        android:layout_alignLeft="@+id/et_cu_email"
        android:layout_alignRight="@+id/et_cu_email"
        android:ems="10" />

    <Button
        android:id="@+id/btn_createuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_cu_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/create_user_account" />

</RelativeLayout>
