<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="materialtest.vivz.slidenerd.materialtest.NavigationDrawerFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/containerDrawerImage"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="@drawable/bg_orange"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="#ffffff"
                android:text="@string/user_name"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/user_email"
                android:textSize="14sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/pic_profile"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="38dp"
            android:id="@+id/circleView"
            />
    </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/containerDrawerImage"
            android:id="@+id/drawerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/login_sign_up_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_bg"
            android:textColor="#000000"
            android:onClick="true"
            android:text="@string/login_or_sign_up" />
    </RelativeLayout>



</RelativeLayout>

